tests/paczka1/fuzzy1/90628856.err
Error in line 3: Qxuqy A883 23,0
Error in line 16: 9NnXXGzso A494 86,0
Error in line 19: 9NnXXGzso S100 58,0
Error in line 21: Qxuqy A883 63,61
Error in line 18: S100 S933 55,8
Error in line 11: Qxuqy S100 40,1
Error in line 32: QQpnJQs A883 -3,1
Error in line 26: zYqIq S100 78,3
